--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="container">
             <div class="row align-items-center p-5">
                 <div class="col-md-6">
-                    <img src="img_02 copy.jpg" class="img-fluid" alt="">
+                    <img src="img_02.jpg" class="img-fluid" alt="">
                 </div>
             
         
